$Id: NEWS,v 1.1073 2009-10-04 19:47:51 castaglia Exp $

-----------------------------------------------------------------------------
  More details on the bugs listed below can be found by using the bug number
  indicated in the following URL:

    http://bugs.proftpd.org/show_bug.cgi?id=N

  where `N' is the bug number.
-----------------------------------------------------------------------------

CVS
--------------------------------
- Bug 3263 - Supplying option SFTPRekey timeout parameter causes segmentation
  fault.
- Bug 3265 - SFTP requests are logged to ExtendedLog without regard to classes.
- Bug 2758 - ProFTPD doesn't always pay attention to AccessDenyMsg.
- Bug 3266 - Support "implicit" FTPS.
- Bug 2070 - AuthAliasOnly off in <Global> section kills anonymous logins.
- Bug 3268 - Files whose names start with whitespace are not listed properly.
- Bug 1908 - ExtendedLog to work properly in <Anonymous> context.
- Bug 3269 - RewriteCondition OR/ornext flag does not work.
- Bug 3254 - NLST/LIST and symbolic link problem.
- Bug 3272 - Avoid encoding if to/from charsets are the same.
- Bug 3274 - Timestamp formatting in TransferLog needs padded day-of-month.
- Bug 3270 - Lost connections to databases not correctly handled.  This
  also adds support for a new "noReconnect" SQLOption.
- Bug 3275 - Improper SSL/TLS certificate subjectAltName verification.
- Bug 3252 - %F/%f Display variables can report wrong size on 64-bit systems.
- Bug 3278 - Aborted data transfers not reflected in RADIUS accounting.
- Bug 3282 - With "SQLNegativeCache on", mod_sql will look up wrong cached
  user value for subsequent USER commands.
- Bug 3284 - Slower transfers of multiple small file transfers after upgrade
  from 1.3.0a to 1.3.2a.
- Bug 3279 - .ftpaccess configurations not merged properly with existing
  configuration.
- Bug 3287 - MaxTransfersPerHost, MaxTransfersPerUser directives not supported
  properly.