@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.1073 2009-10-04 19:47:51 castaglia Exp $
+$Id: NEWS,v 1.1074 2009-10-04 19:52:54 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -59,6 +59,8 @@ CVS
 - Bug 3281 - TimeoutLogin not handled properly by mod_ban.
 - Bug 3213 - Use locale-sensitive libncursesw library for ftptop where
   available.
+- Bug 3214 - ftpwho/ftptop truncate UTF8 strings due to byte, versus character,
+  lengths.
 
 1.3.3rc1 - Released 30-Jun-2009
 --------------------------------
